<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="172dp"
        android:layout_height="204dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/profile_info"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <View
        android:id="@+id/profile_info_divider"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/avatar_divider"
        android:layout_width="1dp"
        android:layout_height="150dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_4_7m"
        android:textColor="#53759A"
        app:layout_constraintBottom_toTopOf="@+id/photos_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/photos_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photos_count"
        android:textColor="#53759A"
        app:layout_constraintBottom_toTopOf="@+id/posts_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/avatar_divider"
        app:layout_constraintTop_toBottomOf="@+id/followers_count" />

    <TextView
        android:id="@+id/posts_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textColor="#53759A"
        app:layout_constraintBottom_toTopOf="@+id/subscribe_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/avatar_divider"
        app:layout_constraintTop_toBottomOf="@+id/photos_count" />

    <Button
        android:id="@+id/subscribe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#53759A"
        android:text="Подписаться"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/avatar_divider"
        app:layout_constraintTop_toBottomOf="@+id/posts_count" />

</androidx.constraintlayout.widget.ConstraintLayout>